--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
           >
         </h1>
         <p class="lead">
-          I like to do cool things in my spare time, check them out below.
+          I like to do cool things in my spare time, check them out below. This website is currently just an experiment, but I'm happy to have you here regardless.
         </p>
         <a
           href="mailto:modisch.fabrications@gmail.com"
@@ -406,15 +406,15 @@
                 <p class="lead">
                     Over 5&#43; years of experience working with private projects from different domains. I make everything that solves a problem, is helpful, nice to look at or at least really really funny.
                 </p>
-                <a href="https://www.thingiverse.com/Modisch_Fabrications/" class="btn btn-primary"
-                   target="_blank">
-                    <i class="thingiverse"></i>
-                    Look at my 3D-Designs
-                    <i class="icon-arrow-right"></i></a>
-                <a href="https://www.thingiverse.com/Modisch_Fabrications/" class="btn btn-frameless"
+                <a href="https://github.com/modischfabrications/" class="btn btn-primary"
                    target="_blank">
                     <i class="github"></i>
                     Look at my code and PCBs
+                    <i class="icon-arrow-right"></i></a>
+                <a href="https://github.com/modischfabrications/" class="btn btn-frameless"
+                   target="_blank">
+                    <i class="thingiverse"></i>
+                    Look at my 3D-Designs
                 </a>
             </div>
         </div>
